# remote_predictor

./: CMakeLists.txt
client/: RemotePredictor.cpp  RemotePredictor.h  main.cpp  predict_client.cpp
examples/: mnn_predict.cpp  mnnpredict.cpp
proto/: gen.sh  model.proto  predict.proto  predict_service.proto  resource_handle.proto  tensor.proto  tensor_shape.proto  types.proto
server/: MNNPredictor.cpp  MNNPredictor.h  PredictionServiceImpl.cpp  PredictionServiceImpl.h  Predictor.cpp  Predictor.h  predict_server.cpp
